<resources>
    <string name="app_name">App Story</string>
    <string name="hello">Welcome to App Story!</string>
    <string name="account">Account</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="title">Welcome to App Story! Please Login/Register before we go further</string>
    <string name="already">Already have an account?</string>
    <string name="empty">Still empty</string>
    <string name="login_failed">Login Failed</string>
    <string name="succeed">Succeed!</string>
    <string name="logout">Logout</string>
    <string name="email">Email</string>
    <string name="input_email">Input your email</string>
    <string name="must_filled">Must be filled!</string>
    <string name="wrong_format">Wrong Format!</string>
    <string name="email_taken">Email already taken!</string>
    <string name="password">Password</string>
    <string name="min_password">8 character minimum!</string>
    <string name="name">Name</string>
    <string name="registration_failed">Registration Failed</string>
    <string name="logout_confirm">Are you sure want to Logout?</string>

    <string name="add_story">Add your story</string>
    <string name="select_img">SELECT IMAGE</string>
    <string name="selected_img">Selected Image</string>
    <string name="desc_story">Story Description…</string>
    <string name="post_story">Post Story</string>
    <string name="empty_desc">Write your Description!</string>
    <string name="upload_success">Story Uploaded!</string>
    <string name="error">Error!</string>
    <string name="story_detail">Story Detail</string>
    <string name="story_picture">Story Picture</string>
    <string name="story">Story</string>

    <string name="username">Username</string>
    <string name="date">dd/MM/YYYY</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="take_pict">Take a Picture</string>
    <string name="switch_cam">Switch Camera</string>
    <string name="loading">Loading…</string>
    <string name="picture_failed">Failed to take a picture</string>
    <string name="camera_failed">Camera Failed</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="retry">Please Retry</string>
    <string name="permission">Need Permission</string>
    <string name="location">Location</string>
    <string name="allow_loc">Allow Location</string>
    <string name="cant_connect">Failed to connect</string>
</resources>